--- a/configure.in
+++ b/configure.in
@@ -32,6 +32,8 @@ AC_CHECK_LIB([pthread], [pthread_create])
 AC_CHECK_LIB([crypto], [MD5_Init])
 AC_CHECK_LIB([m],[sin])
 AC_CHECK_LIB([z], [gzopen])
+AC_CHECK_LIB([websockets], [libwebsocket_create_context])
+AC_CHECK_LIB([microhttpd], [MHD_start_daemon])
 
 # Checks for header files.
 AC_HEADER_DIRENT
