--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ VCProjectDebug
 VCProjectRelease
 /src/vscp/*.opensdf
 /src/vscp/ipch/vscp helper dll-7f0a27e1/*.ipch
+/src/vscp/ipch/rawethernet-e4fc8d3f/*.ipch
