Redesigning VSCP Works

--- a/src/vscp/daemon/win32/vscpd.vcxproj
+++ b/src/vscp/daemon/win32/vscpd.vcxproj
@@ -206,6 +206,7 @@ if exist "$(VSCP_HOME)\src\vscp\Build\$(ConfigurationName)" copy /Y "$(TargetPat
     <ClInclude Include="..\..\common\devicethread.h" />
     <ClInclude Include="..\..\..\common\dllist.h" />
     <ClInclude Include="..\..\common\dm.h" />
+    <ClInclude Include="..\..\common\guid.h" />
     <ClInclude Include="..\..\common\interfacelist.h" />
     <ClInclude Include="..\..\common\variablecodes.h" />
     <ClInclude Include="..\..\common\vscphelper.h" />
