--- a/src/vscp/daemon/win32/vscpd.vcxproj.filters
+++ b/src/vscp/daemon/win32/vscpd.vcxproj.filters
@@ -89,6 +89,9 @@
     <ClInclude Include="..\..\common\variablecodes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common\guid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\common\clientlist.cpp">
