--- a/src/vscp/vscpworks/vscpworks.vcxproj
+++ b/src/vscp/vscpworks/vscpworks.vcxproj
@@ -108,6 +108,7 @@
 		<ClInclude Include="..\common\dllwrapper.h" />
 		<ClInclude Include="..\common\guid.h" />
 		<ClInclude Include="..\common\mdf.h" />
+		<ClInclude Include="..\common\register.h" />
 		<ClInclude Include="..\common\version.h" />
 		<ClInclude Include="..\common\vscp.h" />
 		<ClInclude Include="..\common\vscp_class.h" />
@@ -153,6 +154,7 @@
 		<ClCompile Include="..\common\dllwrapper.cpp" />
 		<ClCompile Include="..\common\guid.cpp" />
 		<ClCompile Include="..\common\mdf.cpp" />
+		<ClCompile Include="..\common\register.cpp" />
 		<ClCompile Include="..\common\vscphelper.cpp" />
 		<ClCompile Include="..\common\vscptcpif.cpp" />
 		<ClCompile Include="bootdevice.cpp" />
