--- a/configure.in
+++ b/configure.in
@@ -170,6 +170,7 @@ AC_CONFIG_FILES([Makefile
 		 src/vscp/drivers/level1/logger/linux/Makefile
 		 src/vscp/drivers/level1/can232/linux/Makefile
                  src/vscp/drivers/level1/xap/linux/Makefile
+                 src/vscp/drivers/level2/logger/linux/Makefile
                  src/vscp/vscpcmd/Makefile
                  src/vscp/vscpworks/Makefile
                  src/vscp/daemon/linux/Makefile
