--- a/configure.in
+++ b/configure.in
@@ -91,7 +91,7 @@ vscp_debug=no
 AC_ARG_ENABLE(debug,
 [  --enable-debug          debug mode (default disabled)],
 [vscp_debug=yes])
-dnl test "${enable_debug}" != "yes" && enable_debug="no"
+dnl test "${vscp_debug}" != "yes" && vscp_debug="no"
 
 
 dnl
@@ -99,12 +99,12 @@ dnl  Unicode mode
 dnl
 
 dnl no unicode build is default
-vscp_unicode=no
+vscp_unicode=yes
 
 AC_ARG_ENABLE(unicode,
-[  --enable-unicode        UNICODE build (default ANSI build)],
+[  --enable-unicode        UNICODE build (default Unicode build)],
 [vscp_unicode=yes])
-dnl test "${enable_unicode}" != "yes" && enable_unicode="no"
+dnl test "${vscp_unicode}" != "yes" && vscp_unicode="no"
 
 
 dnl
