--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,26 @@ VCProjectRelease
 *.ipch
 /src/vscp/vscpworks/*.tmp
 *.*~
+AUTHORS~
+Makefile
+autom4te.cache
+config.log
+config.status
+m4/Makefile
+src/vscp/daemon/linux/Makefile
+src/vscp/daemon/linux/Makefile~
+src/vscp/daemon/linux/param2
+src/vscp/daemon/linux/vscpd
+src/vscp/drivers/level1/can232/linux/Makefile
+src/vscp/drivers/level1/logger/linux/Makefile
+src/vscp/drivers/level1/xap/linux/Makefile
+src/vscp/drivers/level2/logger/README~
+src/vscp/drivers/level2/logger/linux/Makefile
+src/vscp/linuxvscpl1/Makefile
+src/vscp/mkpasswd/Makefile
+src/vscp/mkpasswd/mkpasswd
+src/vscp/vscpcmd/Makefile
+src/vscp/vscpcmd/vscpcmd
+src/vscp/vscpworks/vscpworks
+src/vscp/web/demo/libwebsockets/README~
+
