--- a/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
+++ b/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
@@ -35,7 +35,7 @@ DLLPREFIX = lib
 WX_RELEASE = 2.6
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-VSCP2DRV_LMSENSORS_OBJECTS =  vscp2drv_lmsensors.o  ../common/vscptcpif.o ../common/vscp.o ../../common/crc.o
+VSCP2DRV_LMSENSORS_OBJECTS =  vscp2drv_lmsensors.o lmsensors.o ../common/vscptcpif.o ../common/vscp.o ../../common/crc.o
 PROJOBJS        =  ../common/vscptcpif.o ../common/vscp.o  ../../common/crc.o
 
 
