--- a/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
+++ b/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
@@ -35,8 +35,8 @@ DLLPREFIX = lib
 WX_RELEASE = 2.6
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-LMSENSOROBJ =  lmsensors.o ../common/vscptcpif.o ../../../../common/vscphelper.o
-PROJOBJS =  lmsensors.o ../common/vscptcpif.o ../../../../common/vscphelper.o
+LMSENSOROBJ =  lmsensors.o ../../../../../common/crc.o ../../../../common/vscptcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
+PROJOBJS = lmsensors.o ../../../../../common/crc.o ../../../../common/vscptcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o 
 
 
 
