--- a/vscpd.conf
+++ b/vscpd.conf
@@ -1,134 +1,116 @@
 <?xml version = "1.0" encoding = "UTF-8" ?>
 
-<!-- Version 0.0.1	2007-09-27 -->
+<!-- Version 0.3.4	   2013-05-25 -->
+<!-- Linux example configuration file -->
 
 <vscpconfig>
-	
-	<general>
-		<udpport>9598</udpport>
-		<tcpport>9598</tcpport>
-		<loglevel>debug</loglevel>
-        <!-- It is possibel to disable the TCP/IP interface -->
-		<tcpif disable="false" /> 
-        <!-- It is possible to disable the UDP interface -->
-        <!-- IMPORTANT! The names for local interfaces must be in the /etc/hosts file -->
-		<udpif disable="true" onlyincoming="false"/>
-		<canaldriver disable="false"/>
-		<dm disable="false"/>
-		<vscp disable="false"/>
-	</general>
-	
-	
-	
-	<remoteuser> <!-- Holds information about one (at least) or more users -->
-		<user>
-			<name>admin</name>
-			<password>5ebe2294ecd0e0f08eab7690d2a6ee69</password>
-			<privilege>admin</privilege>
-			<allowfrom>127.0.0.1,192.168.1.6,192.168.1.184</allowfrom>
-		</user>	
-		<user>
-			<name>user</name>
-			<password>5ebe2294ecd0e0f08eab7690d2a6ee69</password>
-			<privilege>admin</privilege>
-			<allowfrom>127.0.0.1,192.168.1.6,192.168.1.184</allowfrom>
-		</user>	
-	</remoteuser>
-	
-	
-	
-	<interfaces> <!-- Holds information about interfaces on the machine the daemon is run on -->
-		<interface> 
-			<ipaddress>192.168.1.184</ipaddress>
-			<macaddress>00:16:D4:5D:68:F6</macaddress>
-			<guid>01:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
-		</interface> 
-	</interfaces>
-	
-	
-	
-	
-	<canaldriver>  <!-- Information about CANAL drivers --> 
 
-		<driver>
-		   <name>logger</name>
-		   <parameter>/var/log/canallog</parameter>
-		   <path>/usr/local/lib/canallogger.so</path>
-		   <flags>1</flags>
-		</driver>
-		
-		<driver>
-			<name>communication</name>
-			<parameter>/dev/ttyS0</parameter>
-			<path>/usr/local/lib/canalcom.so</path>
-			<flags>1</flags>
-		</driver>
-		
-		<driver>
-			<name>logger</name>
-			<parameter>/var/log/canallog</parameter>
-			<path>/usr/local/lib/canallogger.so</path>
-			<flags>1</flags>
-		</driver>
-		
-		<driver>
-			<name>xap</name>
-			<parameter>1681;3639</parameter>
-			<path>/usr/local/lib/xapdrv.so</path>
-			<flags>1</flags>
-		</driver>		
-		
-		 
-	</canaldriver>
+    <general>
+        <!-- Set the detail of logging you want -->
+        <loglevel>debug</loglevel>
+
+        <!-- It is possibel to disable the TCP/IP interface -->
+        <!--   Set binddaadress to listen for connections on a specific -->
+        <!--   interface. -->
+        <tcpif disabled="false" port="9598" bindaddress=""/>
+
+        <!-- Set to true to disable CANAL driver interface -->
+        <canaldriver disabled="false"/>
+
+        <!-- Set disable to true to diable decision matrix part -->
+        <!--   Path to the decision matrix file location -->
+        <dm disabled="false" path="/srv/vscp/dm.xml"/>
+
+	<!-- Path to variables storage. -->
+	<variables disabled="false" path="/srv/vscp/variables.xml"/>
+
+	<! Set to true to disable VSCP high end services -->
+        <vscp disabled="false"/>
+
+        <!-- Path to server root file system -->
+        <!-- Server should have read/write access to this location -->
+        <rootpath>
+            /srv/vscp/www
+        </rootpath>
+
+        <websockets enable="true" port="7681" />
+
+        <!-- Set GUID for daemon -->
+        <guid>
+            00:01:02:03:04:05:06:07:08:09:0A:0B:0C:0D:0E:0F</guid>
+        </general>
+
+        <!-- Holds information about one (at least) or more users --> 
+        <!-- Use mkpassword to generate a new password            -->
+        <!--   Privilege is admin/user                            -->
+        <remoteuser> 
+            <user>
+                <name>admin</name>
+                <password>5ebe2294ecd0e0f08eab7690d2a6ee69</password>
+                <privilege>admin</privilege>
+                <allowfrom>127.0.0.1,192.168.168.10</allowfrom>
+            </user>	
+            <user>
+                <name>user</name>
+                <password>ee11cbb19052e40b07aac0ca060c23ee</password>
+                <privilege>admin</privilege>
+                <allowfrom>127.0.0.1,192.168.168.*</allowfrom>
+            </user>	
+        </remoteuser>
 	
+        <!-- Holds information about interfaces on the 
+             machine the daemon is run on -->
+        <interfaces>
+            <interface> 
+                <ipaddress>192.168.168.10</ipaddress>
+                <macaddress>00:16:D4:5D:68:F6</macaddress>
+                <guid>
+                    01:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00
+                </guid>
+            </interface> 
+        </interfaces>
 	
-	
-	<persistent>    <!-- persistant storage is here --> 
-		
-		<variable type="1" >  <!-- string -->
-			<name>testvariable1</name>
-			<value>This is a string</value>
-		</variable>
-		
-		<variable type="2" >  <!-- boolean -->
-			<name>testvariable2</name>
-			<value>true</value>
-		</variable>
-		
-		<variable type="3" >  <!-- integer -->
-			<name>testvariable3</name>
-			<value>1956</value>
-		</variable>
-		
-		<variable type="4" >  <!-- long -->
-			<name>testvariable4</name>
-			<value>0xffffffff</value>
-		</variable>
-		
-		<variable type="5" >  <!-- normalized integer -->
-			<name>testvariable5</name>
-			<value>0x0001020304050607</value>
-		</variable>
-		
-		<variable type="6" >  <!-- VSCP Event -->
-			<name>testvariable6</name>
-			<value>class=10,type=40,data=0x12,1,2,3,4,5</value>
-		</variable>
-		
-		<array type="1">
-			<name>testarray</name>
-			<value>10</value>
-			<value>11</value>
-			<value>22</value>
-			<value>33</value>
-			<value>144</value>
-			<value>1000</value>
-			<value>3</value>
-			<value>100</value>
-			<value>200</value>
-			<value>1111</value>
-		</array>
-		
-	</persistent>
-	
+        <!-- List level I/CANAL drivers here -->
+        <!--
+        <canaldriver> 
+            <driver>
+                <name>logger</name>
+                <parameter>/tmp/canallog.txt</parameter>
+                <path>/usr/local/lib/canallogger.so</path>
+                <flags>1</flags>
+            </driver>
+            <driver>
+                <name>can232</name>
+                <parameter>/dev/ttyS0;19200;0;0;125</parameter>
+                <path>/usr/local/lib/can232drv.so</path>
+                <flags>0</flags>
+            </driver>
+        </canaldriver>
+	-->	
+
+	<!-- List level II VSCP drivers here-->
+        <vscpdriver>	 	
+            <!-- Level II Logger -->
+            <driver prefix="mainlogger" >
+                <name>VSCP Logger</name>	
+                <path>
+                    /home/akhe/vscp_software/src/vscp/drivers/level2/logger/linux/vscpl2logger.so
+                </path>
+                <parameter>/tmp/vscp_level2.log</parameter> 		
+                <guid>
+                    00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00
+                </guid>
+           </driver> 	
+           <driver prefix="mainlogger" >
+               <name>VSCP Logger</name>
+               <path>
+                   /home/akhe/vscp_software/src/vscp/drivers/level2/lmsensors/linux/vscpl2_lmsensors.so
+                </path>
+                <parameter>2</parameter>
+                <guid>
+                    00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00
+                </guid>
+            </driver>
+        </vscpdriver>	
+
 </vscpconfig>
