Moved configuration examples to there own folder Changed default paths for dm and varaibles configuration files Changed parameter "parameter" to "config" for drivers

--- a/config_examples/vscpd.conf
+++ b/config_examples/vscpd.conf
@@ -75,13 +75,13 @@
         <canaldriver> 
             <driver>
                 <name>logger</name>
-                <parameter>/tmp/canallog.txt</parameter>
+                <config>/tmp/canallog.txt</config>
                 <path>/usr/local/lib/canallogger.so</path>
                 <flags>1</flags>
             </driver>
             <driver>
                 <name>can232</name>
-                <parameter>/dev/ttyS0;19200;0;0;125</parameter>
+                <config>/dev/ttyS0;19200;0;0;125</config>
                 <path>/usr/local/lib/can232drv.so</path>
                 <flags>0</flags>
             </driver>
@@ -94,9 +94,9 @@
             <driver prefix="mainlogger" >
                 <name>VSCP Logger</name>	
                 <path>
-                    /home/akhe/vscp_software/src/vscp/drivers/level2/logger/linux/vscpl2logger.so
+                    /home/akhe/vscp_software/src/vscp/drivers/level2/logger/linux/vscpl2_loggerdrv.so
                 </path>
-                <parameter>/tmp/vscp_level2.log</parameter> 		
+                <config>/tmp/vscp_level2.log</config> 		
                 <guid>
                     00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00
                 </guid>
@@ -104,9 +104,9 @@
            <driver prefix="mainlogger" >
                <name>VSCP Logger</name>
                <path>
-                   /home/akhe/vscp_software/src/vscp/drivers/level2/lmsensors/linux/vscpl2_lmsensors.so
+                   /home/akhe/vscp_software/src/vscp/drivers/level2/lmsensors/linux/vscp2drv_lmsensors.so
                 </path>
-                <parameter>2</parameter>
+                <config>2</config>
                 <guid>
                     00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00
                 </guid>
