--- a/config_examples/vscpd.conf
+++ b/config_examples/vscpd.conf
@@ -1,6 +1,6 @@
 <?xml version = "1.0" encoding = "UTF-8" ?>
 
-<!-- Version 0.3.4	   2013-05-25 -->
+<!-- Version 0.4.0	   2013-05-28 -->
 <!-- Linux example configuration file -->
 
 <vscpconfig>
@@ -21,24 +21,24 @@
         <!--   Path to the decision matrix file location -->
         <dm disabled="false" path="/srv/vscp/dm.xml"/>
 
-	<!-- Path to variables storage. -->
-	<variables disabled="false" path="/srv/vscp/variables.xml"/>
+        <!-- Path to variables storage. -->
+        <variables disabled="false" path="/srv/vscp/variables.xml"/>
 
-	<! Set to true to disable VSCP high end services -->
+        <!-- Set to true to disable VSCP high end services -->
         <vscp disabled="false"/>
 
         <!-- Path to server root file system -->
         <!-- Server should have read/write access to this location -->
-        <rootpath>
-            /srv/vscp/www
-        </rootpath>
+        <webrootpath>/srv/vscp/www</webrootpath>
 
         <websockets enable="true" port="7681" />
 
         <!-- Set GUID for daemon -->
         <guid>
-            00:01:02:03:04:05:06:07:08:09:0A:0B:0C:0D:0E:0F</guid>
-        </general>
+            00:01:02:03:04:05:06:07:08:09:0A:0B:0C:0D:0E:0F
+        </guid>
+
+    </general>
 
         <!-- Holds information about one (at least) or more users --> 
         <!-- Use mkpassword to generate a new password            -->
@@ -92,7 +92,7 @@
         <vscpdriver>	 	
             <!-- Level II Logger -->
             <driver prefix="mainlogger" >
-                <name>VSCP Logger</name>	
+                <name>VSCP Logger Driver 1</name>	
                 <path>
                     /home/akhe/vscp_software/src/vscp/drivers/level2/logger/linux/vscpl2_loggerdrv.so
                 </path>
@@ -101,8 +101,8 @@
                     00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00
                 </guid>
            </driver> 	
-           <driver prefix="mainlogger" >
-               <name>VSCP Logger</name>
+           <driver prefix="lmsensors1" >
+               <name>VSCP LM-Sensors driver 1</name>
                <path>
                    /home/akhe/vscp_software/src/vscp/drivers/level2/lmsensors/linux/vscp2drv_lmsensors.so
                 </path>
@@ -111,6 +111,18 @@
                     00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00
                 </guid>
             </driver>
+
+		<driver prefix="socketcan1" >
+               		<name>VSCP SocketCAN Driver 1</name>
+               <path>
+                   /home/akhe/vscp_software/src/vscp/drivers/level2/socketcan/linux/vscp2drv_socketcan.so
+                </path>
+                <config>can0</config>
+                <guid>
+                    00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00
+                </guid>
+            </driver>
+
         </vscpdriver>	
 
 </vscpconfig>
