--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ src/vscp/drivers/level2/socketcan/linux/a.out
 src/vscp/drivers/level2/socketcan/linux/readsockt
 src/vscp/drivers/level2/socketcan/linux/test
 src/vscp/drivers/level2/socketcan/linux/readsock
+src/vscp/drivers/level2/rawethernet/linux/test
+src/vscp/drivers/level2/tcpdrv/linux/test
