Added linux helper lib (just initla work)

--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,4 @@ src/vscp/drivers/level2/rawethernet/linux/test
 src/vscp/drivers/level2/tcpdrv/linux/test
 BUILD_UNIX~
 src/vscp/drivers/level2/mqtt/linux/test
-
+src/vscp/helperlib/linux/Makefile
