--- a/src/vscp/helperlib/linux/Makefile.in
+++ b/src/vscp/helperlib/linux/Makefile.in
@@ -35,7 +35,7 @@ DLLPREFIX = lib
 WX_RELEASE = 2.8
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-VSCPHELPER_OBJECTS =  libvscphelper.o ../vscphelperdll.cpp ../../common/vscptcpif.o ../../common/vscphelper.o ../../common/guid.o ../../../common/crc.o
+VSCPHELPER_OBJECTS =  libvscphelper.o ../../common/vscptcpif.o ../../common/vscphelper.o ../../common/guid.o ../../../common/crc.o
 PROJOBJS        =  ../../common/vscptcpif.o ../../common/vscphelper.o  ../../../common/crc.o ../../common/guid.o
 
 
