--- a/configure.in
+++ b/configure.in
@@ -79,7 +79,7 @@ dnl
 dnl Project Sub directories
 dnl
 
-PROJ_SUBDIRS="src/vscp/drivers/level1/logger/linux src/vscp/drivers/level1/can232/linux src/vscp/drivers/level1/xap/linux src/vscp/drivers/level1/socketcan/linux src/vscp/drivers/level2/logger/linux src/vscp/drivers/level2/lmsensors/linux src/vscp/drivers/level2/socketcan/linux src/vscp/drivers/level2/mqtt/linux src/vscp/drivers/level2/tcpdrv/linux src/vscp/drivers/level2/rawethernet/linux src/vscp/linuxvscpl1 src/vscp/helperlib/linux src/vscp/daemon/linux src/vscp/mkpasswd"  
+PROJ_SUBDIRS="src/vscp/drivers/level1/logger/linux src/vscp/drivers/level1/can232/linux src/vscp/drivers/level1/xap/linux src/vscp/drivers/level1/socketcan/linux src/vscp/drivers/level2/logger/linux src/vscp/drivers/level2/lmsensors/linux src/vscp/drivers/level2/socketcan/linux src/vscp/drivers/level2/mqtt/linux src/vscp/drivers/level2/tcpdrv/linux src/vscp/drivers/level2/rawethernet/linux src/vscp/linuxvscpl1 src/vscp/helperlib/linux src/vscp/daemon/linux src/vscp/mkpasswd src/vscp/uvscpd"  
 AC_SUBST(PROJ_SUBDIRS)
 PROJ_SUBDIRS_GUI="src/vscp/vscpworks src/vscp/vscpcmd"
 AC_SUBST(PROJ_SUBDIRS_GUI)
@@ -175,13 +175,14 @@ AC_CONFIG_FILES([Makefile
          src/vscp/drivers/level1/socketcan/linux/Makefile
          src/vscp/drivers/level2/logger/linux/Makefile
          src/vscp/drivers/level2/lmsensors/linux/Makefile
-	 src/vscp/drivers/level2/mqtt/linux/Makefile
+	     src/vscp/drivers/level2/mqtt/linux/Makefile
          src/vscp/drivers/level2/socketcan/linux/Makefile
          src/vscp/drivers/level2/tcpdrv/linux/Makefile
          src/vscp/drivers/level2/rawethernet/linux/Makefile
          src/vscp/vscpcmd/Makefile
          src/vscp/vscpworks/Makefile
          src/vscp/daemon/linux/Makefile
+         src/vscp/uvscpd/Makefile
          src/vscp/mkpasswd/Makefile
          src/vscp/linuxvscpl1/Makefile
          src/vscp/helperlib/linux/Makefile
@@ -210,6 +211,7 @@ echo   "VSCP GUI Build        : ${vscp_gui}"
 
 if test "${vscp_debug}" = "yes" 
 then
+
    printf "build flavour         : debug "
 else
    printf "build flavour         : release "
