Added websocket files

--- a/src/vscp/uvscpd/Makefile.in
+++ b/src/vscp/uvscpd/Makefile.in
@@ -33,8 +33,8 @@ DESTDIR =
 WX_RELEASE = 2.8
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-UVSCPD_OBJECTS =  \
-	uvscpd.o ../common/vscphelper.o \
+UVSCPD_OBJECTS =  uvscpd.o websocket.o base64_enc.o sha1.c \
+        ../common/vscphelper.o \
 	../../../common/dllist.o \
 	../../../common/crc.o \
 	../../../common/md5.o \
