--- a/src/vscp/daemon/linux/carambola/pkg/Makefile
+++ b/src/vscp/daemon/linux/carambola/pkg/Makefile
@@ -2,7 +2,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=evscpd
 PKG_RELEASE:=1
-PATH_VSCP:=/usr/local/src/m2m
+PATH_VSCP:=/home/ice/work/pic/can/vscp.git
 PKG_SOURCES:=$(PATH_VSCP)/src/vscp/daemon/linux/carambola
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)
 
@@ -11,15 +11,17 @@ include $(INCLUDE_DIR)/package.mk
 define Package/$(PKG_NAME)
 	SECTION:=utils
 	CATEGORY:=Utilities
+	DEPENDS:=+libwebsockets +libwxbase
 	TITLE:=$(PKG_NAME)
 endef
 
 MAKE_FLAGS += \
-	CFLAGS="$(TARGET_CFLAGS)" \
-	CXXFLAGS="$(TARGET_CXXFLAGS) -fno-builtin -fno-rtti -nostdinc++" \
-	CPPFLAGS="$(TARGET_CPPFLAGS) -I$(STAGING_DIR)/usr/include/uClibc++ -I$(LINUX_DIR)/include -I$(STAGING_DIR)/usr/lib/wx/include/mipsel-openwrt-linux-base-unicode-release-2.8 -I$(STAGING_DIR)/usr/include/wx-2.8 -I$(PATH_VSCP)/src/vscp/daemon/linux -I$(PATH_VSCP)/src/common -I$(PATH_VSCP)/src/vscp/common  -DwxUSE_GUI=0" \
+	CFLAGS="$(TARGET_CFLAGS) -g -O2 -fPIC -pthread" \
+	DLFLAGS=" -g -shared -fPIC -Wl,--no-undefined" \
+	CXXFLAGS="$(TARGET_CXXFLAGS) -fno-builtin -fno-rtti -nostdinc++ -g -O2  -D__LINUX__ -fPIC" \
+	CPPFLAGS="$(TARGET_CPPFLAGS) -I$(STAGING_DIR)/usr/include/uClibc++ -I$(LINUX_DIR)/include -I$(STAGING_DIR)/usr/lib/wx/include/mipsel-openwrt-linux-base-unicode-release-2.8 -I$(STAGING_DIR)/usr/include/wx-2.8 -I$(PATH_VSCP)/src/vscp/daemon/linux -I$(PATH_VSCP)/src/common -I$(PATH_VSCP)/src/vscp/common -Iinclude -DwxUSE_GUI=0" \
 	LDFLAGS="$(TARGET_LDFLAGS) $(LDFLAGS)" \
-	LIBS="$(TARGET_LIBS) -lz -lm -lcrypto -lpthread -ldl -lwx_baseu_xml-2.8-mipsel-openwrt-linux -lwx_baseu_net-2.8-mipsel-openwrt-linux -lwx_baseu-2.8-mipsel-openwrt-linux" \
+	LIBS="$(TARGET_LIBS) -lwebsockets -lz -lm -lcrypto -lpthread -ldl -lwx_baseu_xml-2.8-mipsel-openwrt-linux -lwx_baseu_net-2.8-mipsel-openwrt-linux -lwx_baseu-2.8-mipsel-openwrt-linux" \
 	DESTDIR="$(PKG_INSTALL_DIR)"
 
 define Build/Prepare
@@ -32,8 +34,16 @@ define Build/Compile
 endef
 
 define Package/$(PKG_NAME)/install
-	$(INSTALL_DIR) $(1)/bin
+	$(INSTALL_DIR) $(1)/bin/
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/$(PKG_NAME) $(1)/bin/
+	$(INSTALL_DIR) $(1)/usr/lib/
+	$(INSTALL_DATA) $(PKG_BUILD_DIR)/socketcandrv.so $(1)/usr/lib/
+	$(INSTALL_DIR) $(1)/etc/vscp
+	$(INSTALL_DATA) $(PKG_BUILD_DIR)/vscpd.conf $(1)/etc/vscp
+	$(INSTALL_DIR) $(1)/var/www/htdocs/vscp/
+	$(INSTALL_DATA) $(PKG_BUILD_DIR)/www/*.html $(1)/var/www/htdocs/vscp/
+	$(INSTALL_DIR) $(1)/var/www/htdocs/vscp/images/
+	$(INSTALL_DATA) $(PKG_BUILD_DIR)/www/images/*.png $(1)/var/www/htdocs/vscp/images/
 endef
 
 $(eval $(call BuildPackage,$(PKG_NAME)))
