Mime types are now read from a configuratable file on startup

--- a/vscpd.conf
+++ b/vscpd.conf
@@ -31,6 +31,9 @@
         <!-- Server should have read/write access to this location -->
         <webrootpath>/home/akhe/vscp_merlin</webrootpath>
 
+	<!-- Path to file holding mime types -->
+	<pathtomimetypes>/etc/vscpd/mimetypes.xml</pathtomimetypes>
+
         <websockets enable="true" port="7681" />
 
         <!-- Set GUID for daemon -->
