--- a/config_examples/vscpd.conf
+++ b/config_examples/vscpd.conf
@@ -12,30 +12,33 @@
         <!-- It is possibel to disable the TCP/IP interface -->
         <!--   Set binddaadress to listen for connections on a specific -->
         <!--   interface. -->
-        <tcpif disabled="false" port="9598" bindaddress=""/>
+        <tcpif enable="true" port="9598" bindaddress=""/>
 
         <!-- Set to true to disable CANAL driver interface -->
-        <canaldriver disabled="false"/>
+        <canaldriver enable="true"/>
 
         <!-- Set disable to true to diable decision matrix part -->
         <!--   Path to the decision matrix file location -->
-        <dm disabled="false" path="/srv/vscp/dm.xml"/>
+        <dm enable="true" path="/srv/vscp/dm.xml"/>
 
         <!-- Path to variables storage. -->
-        <variables disabled="false" path="/srv/vscp/variables.xml"/>
+        <variables enable="true" path="/srv/vscp/variables.xml"/>
 
         <!-- Set to true to disable VSCP high end services -->
-        <vscp disabled="false"/>
+        <vscp enable="true"/>
 
         <!-- Path to server root file system -->
         <!-- Server should have read/write access to this location -->
-        <webrootpath>/srv/vscp/www</webrootpath>
+        <webrootpath>/home/akhe/vscp_merlin</webrootpath>
+
+	<!-- Path to file holding mime types -->
+	<pathtomimetypes>/etc/vscpd/mimetypes.xml</pathtomimetypes>
 
         <websockets enable="true" port="7681" />
 
         <!-- Set GUID for daemon -->
         <guid>
-            00:01:02:03:04:05:06:07:08:09:0A:0B:0C:0D:0E:0F
+            FF:EE:DD:CC:BB:AA:99:88:77:66:55:44:00:00:00:00
         </guid>
 
     </general>
@@ -48,13 +51,13 @@
                 <name>admin</name>
                 <password>5ebe2294ecd0e0f08eab7690d2a6ee69</password>
                 <privilege>admin</privilege>
-                <allowfrom>127.0.0.1,192.168.168.10</allowfrom>
+                <allowfrom>127.0.0.1,192.168.1.23</allowfrom>
             </user>	
             <user>
                 <name>user</name>
                 <password>ee11cbb19052e40b07aac0ca060c23ee</password>
                 <privilege>admin</privilege>
-                <allowfrom>127.0.0.1,192.168.168.*</allowfrom>
+                <allowfrom>127.0.0.1,192.168.1.*</allowfrom>
             </user>	
         </remoteuser>
 	
@@ -71,57 +74,54 @@
         </interfaces>
 	
         <!-- List level I/CANAL drivers here -->
-        <!--
         <canaldriver> 
             <driver>
                 <name>logger</name>
                 <config>/tmp/canallog.txt</config>
-                <path>/usr/local/lib/canallogger.so</path>
+                <path>
+			/home/akhe/vscp_software/src/vscp/drivers/level1/logger/linux/canallogger.soa
+		</path>
                 <flags>1</flags>
             </driver>
             <driver>
                 <name>can232</name>
                 <config>/dev/ttyS0;19200;0;0;125</config>
-                <path>/usr/local/lib/can232drv.so</path>
+                <path>/usr/local/lib/can232drv.soa</path>
                 <flags>0</flags>
             </driver>
         </canaldriver>
-	-->	
 
 	<!-- List level II VSCP drivers here-->
         <vscpdriver>	 	
+
             <!-- Level II Logger -->
             <driver prefix="mainlogger" >
-                <name>VSCP Logger Driver 1</name>	
-                <path>
-                    /home/akhe/vscp_software/src/vscp/drivers/level2/logger/linux/vscpl2_loggerdrv.so
-                </path>
+                <name>VSCPLoggerDriver1</name>	
+                <path>/home/akhe/vscp_software/src/vscp/drivers/level2/logger/linux/vscpl2_loggerdrv.soa</path>
                 <config>/tmp/vscp_level2.log</config> 		
-                <guid>
-                    00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00
-                </guid>
-           </driver> 	
+                <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
+           </driver>
+ 	
            <driver prefix="lmsensors1" >
-               <name>VSCP LM-Sensors driver 1</name>
-               <path>
-                   /home/akhe/vscp_software/src/vscp/drivers/level2/lmsensors/linux/vscp2drv_lmsensors.so
-                </path>
+               <name>VSCPLMSensorsDriver1</name>
+               <path>/home/akhe/vscp_software/src/vscp/drivers/level2/lmsensors/linux/vscp2drv_lmsensors.soa</path>
                 <config>2</config>
-                <guid>
-                    00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00
-                </guid>
+                <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
             </driver>
 
-		<driver prefix="socketcan1" >
-               		<name>VSCP SocketCAN Driver 1</name>
-               <path>
-                   /home/akhe/vscp_software/src/vscp/drivers/level2/socketcan/linux/vscp2drv_socketcan.so
-                </path>
+	    <driver prefix="socketcan1" >
+                <name>VSCPSocketCANDriver 1</name>
+                <path>/home/akhe/vscp_software/src/vscp/drivers/level2/socketcan/linux/vscp2drv_socketcan.so</path>
                 <config>can0</config>
-                <guid>
-                    00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00
-                </guid>
+                <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
             </driver>
+
+            <driver prefix="mqtt1" >
+                <name>VSCPMQTTDriver1</name>
+                <path>/home/akhe/vscp_software/src/vscp/drivers/level2/mqtt/linux/vscp2drv_mqtt.soa</path>
+                <config>publish;vscp;localhost;1883;;60</config>
+                <guid>00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00</guid>
+            </driver>	
 
         </vscpdriver>	
 
